# wagtail-code-blocks

./: .gitignore  pyproject.toml  readme.md
code_blocks/: apps.py
code_blocks/blocks/: __init__.py
code_blocks/blocks/pygments/: __init__.py  adapter.py  block.py
code_blocks/management/commands/: gen_pygments_style_css.py
code_blocks/migrations/: 0001_initial.py
code_blocks/models/: settings.py
code_blocks/static/code_blocks/css/: pygments_code_block.css
code_blocks/static/code_blocks/css/admin/: pygments_code_block.css
code_blocks/static/code_blocks/css/pygments/: abap.css  algol.css  algol_nu.css  arduino.css  autumn.css  borland.css  bw.css  colorful.css  default.css  dracula.css  emacs.css  friendly.css  friendly_grayscale.css  fruity.css  github-dark.css  gruvbox-dark.css  gruvbox-light.css  igor.css  inkpot.css  lightbulb.css  lilypond.css  lovelace.css  manni.css  material.css  monokai.css  murphy.css  native.css  nord-darker.css  nord.css  one-dark.css  paraiso-dark.css  paraiso-light.css  pastie.css  perldoc.css  rainbow_dash.css  rrt.css  sas.css  solarized-dark.css  solarized-light.css  staroffice.css  (+9 more)
code_blocks/static/code_blocks/js/: pygments_code_block.js
code_blocks/static/code_blocks/js/admin/: pygments_code_block.js
code_blocks/templates/code_blocks/admin/forms/: pygments_code_block.html
code_blocks/templatetags/: code_blocks.py
code_blocks/util/pygments/: defaults.py  formatter.py
www/: __main__.py  conf.py  manage.py
