[tool.poetry]
name = "wagtail-code-blocks"
version = "0.1.2"
description = "Wagtail Code Blocks"
authors = ["Phillip Sitbon <phillip.sitbon@gmail.com>"]
readme = "readme.md"
homepage = "https://github.com/sitbon/wagtail-code-blocks"

packages = [
    { include = "code_blocks" }
]

exclude = [
    "www"
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
wagtail = "^6.0.2"
pygments = "^2.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
